// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentsComponent should create edit only view when editState is set to true 1`] = `
<vtm-documents
  editState={[Function Boolean]}
  microfilm={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        <vtm-documents-edit
          ng-reflect-microfilm-details="[object Object]"
        >
          <div>
            microfilmDetails is: {
    "microfilmDocumentType": "PSV Miscellaneous",
    "microfilmRollNumber": "1234",
    "microfilmSerialNumber": "5678"
  }
          </div>
        </vtm-documents-edit>
      </dt>
    </div>
  </dl>
</vtm-documents>
`;

exports[`DocumentsComponent should create view only with populated data 1`] = `
<vtm-documents
  microfilm={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Microfilm document type
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-microfilmDocumentType"
      >
         PSV Miscellaneous 
      </dd>
      <dd
        class="govuk-summary-list__value"
      />
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Microfilm roll number
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-microfilmRollNumber"
      >
         1234 
      </dd>
      <dd
        class="govuk-summary-list__value"
      />
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Microfilm serial number
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-microfilmSerialNumber"
      >
         5678 
      </dd>
      <dd
        class="govuk-summary-list__value"
      />
    </div>
  </dl>
</vtm-documents>
`;
